--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lesson 28</title>
+    <title>Lesson 29</title>
     <link rel="stylesheet" href="fontawesome/css/all.css">
     <link rel="stylesheet" href="styles/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles/style.css">
@@ -299,7 +299,7 @@
 
                                 </div>
                                 <div class="product_icon">
-                                    <span class="circle"><i class="fas fa-shopping-bag"></i></span>
+                                    <span class="circle add_to_card"><i class="fas fa-shopping-bag"></i></span>
                                     <span class="circle"><i class="fas fa-balance-scale"></i></span>
                                     <span class="circle"><i class="fas fa-heart"></i></span>
                                 </div>
@@ -327,7 +327,7 @@
 
                                 </div>
                                 <div class="product_icon">
-                                    <span class="circle"><i class="fas fa-shopping-bag"></i></span>
+                                    <span class="circle add_to_card"><i class="fas fa-shopping-bag"></i></span>
                                     <span class="circle"><i class="fas fa-balance-scale"></i></span>
                                     <span class="circle"><i class="fas fa-heart"></i></span>
                                 </div>
@@ -355,7 +355,7 @@
 
                                 </div>
                                 <div class="product_icon">
-                                    <span class="circle"><i class="fas fa-shopping-bag"></i></span>
+                                    <span class="circle add_to_card"><i class="fas fa-shopping-bag"></i></span>
                                     <span class="circle"><i class="fas fa-balance-scale"></i></span>
                                     <span class="circle"><i class="fas fa-heart"></i></span>
                                 </div>
@@ -384,7 +384,7 @@
 
                                 </div>
                                 <div class="product_icon">
-                                    <span class="circle"><i class="fas fa-shopping-bag"></i></span>
+                                    <span class="circle add_to_card"><i class="fas fa-shopping-bag"></i></span>
                                     <span class="circle"><i class="fas fa-balance-scale"></i></span>
                                     <span class="circle"><i class="fas fa-heart"></i></span>
                                 </div>
@@ -413,7 +413,7 @@
 
                                 </div>
                                 <div class="product_icon">
-                                    <span class="circle"><i class="fas fa-shopping-bag"></i></span>
+                                    <span class="circle add_to_card"><i class="fas fa-shopping-bag"></i></span>
                                     <span class="circle"><i class="fas fa-balance-scale"></i></span>
                                     <span class="circle"><i class="fas fa-heart"></i></span>
                                 </div>
@@ -491,6 +491,7 @@
                             <li><a href="#"><img src="img/img23.jpg" alt=""></li></a>
                             <li><a href="#"><img src="img/img24.jpg" alt=""></li></a>
                             <li><a href="#"><img src="img/img25.jpg" alt=""></li></a>
+                            <li><a href="#"><img src="img/img27.jpg" alt=""></li></a>
                         </ul>
                        </div>
                    </div>
